# walnut_zephyr

./: CMakeLists.txt  README.md  build.sh  prj.conf
boards/arm/walnut/: Kconfig.board  Kconfig.defconfig  walnut.dts  walnut.yaml  walnut_climate.conf  walnut_defconfig
drivers/: CMakeLists.txt
drivers/bmp280/: CMakeLists.txt  Kconfig  bmp280.c  bmp280.h
drivers/i2c_wrap/: CMakeLists.txt  Kconfig  i2c_wrap.c  i2c_wrap.h
drivers/si7020/: CMakeLists.txt  Kconfig  si7020.c  si7020.h  si7020_trigger.c
drivers/tsl4531/: CMakeLists.txt  Kconfig  tsl4531.c  tsl4531.h  tsl4531_trigger.c
src/: als.c  als.h  bas.c  bas.h  ble.c  ble.h  bp_sens.c  bp_sens.h  debug.c  dis.c  dis.h  ess.c  ess.h  fg.c  fg.h  gdfs.c  gdfs.h  main.c  nv.c  nv.h  t_rh_sens.c  t_rh_sens.h
